--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            <button type="submit" class="btn">Find out!</button>
        </form>
        <div id="result">
-           
+           <p><span class="year"></span> is <span class="not"></span> a leap year.</p>
        </div>
    </div>
 </body>
